--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script type="text/javascript" src="js/arrays.js"></script>
+    <script type="text/javascript" src="js/ejercicio_arrays.js"></script>
 </head>
 <body>
     <h1>Curso Javascript</h1>
